Creating a Custom Component

--- a/ng-training/src/app/app.component.html
+++ b/ng-training/src/app/app.component.html
@@ -3,3 +3,6 @@
 <p>This is my first angular-app</p>
 <p>{{message}}</p>
 </div>
+<hr/>
+<app-e-shopping-component></app-e-shopping-component>
+<hr/>
