practice  String Interpolation

--- a/ng-training/src/app/home/home.component.html
+++ b/ng-training/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <div class="d-flex">
 <img src="./../../assets/shopping.jpg" />
-<h1>Your One Stop Shop for everything</h1>
+<h1>{{ slogan }}</h1>
 </div>
