--- a/ng-training/src/app/event-binding/event-binding.component.css
+++ b/ng-training/src/app/event-binding/event-binding.component.css
@@ -1,9 +1,11 @@
-.data{
+.data,.alert {
   width:400px;
   padding: 20px 20px;
-  background-color: rgb(148, 217, 227);
   margin: auto;
   text-align: center;
+}
+.data{
+   background-color: rgb(148, 217, 227);
 }
 label{
   padding-right: 20px;
@@ -14,4 +16,18 @@ p{
 span{
   font-weight: 600;
   color: brown;
+}
+.alert{
+  position: relative;
+  margin-bottom: 30px;
+}
+.btn{
+  position: absolute;
+  top:-15px;
+  right:-20px;
+  background-color: crimson;
+  border-radius: 50%;
+  width:40px;
+  height: 40px;
+
 }
