--- a/ng-training/src/app/event-binding/event-binding.component.html
+++ b/ng-training/src/app/event-binding/event-binding.component.html
@@ -3,3 +3,9 @@
 <input type="text" (input)="show($event)"/>
 <p>You searched for <span> "{{value}}"</span></p>
 </div>
+<hr>
+<div class="alert alert-danger" role="alert" [hidden]=hidden>
+  A simple danger alert—check it out!
+  <button class="btn" (click)="hideAlert()">x</button>
+</div>
+<hr>
