--- a/ng-training/src/app/app.component.html
+++ b/ng-training/src/app/app.component.html
@@ -7,3 +7,4 @@
 <app-e-shopping-component></app-e-shopping-component>
 <hr/>
 <app-event-binding></app-event-binding>
+<app-products></app-products>
