--- a/ng-training/src/app/app.component.html
+++ b/ng-training/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="info">
+<!-- <div class="info">
 <h2>Welcome {{title}}</h2>
 <p>This is my first angular-app</p>
 <p>{{message}}</p>
@@ -8,4 +8,9 @@
 <hr/>
 <app-event-binding></app-event-binding>
 <app-products></app-products>
-<app-product></app-product>
+<app-product></app-product> -->
+
+<app-main></app-main>
+<router-outlet>
+
+</router-outlet>
